# gcode-language-server

./: .gcode.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GCODE_README.md  README.md  demo.gcode  deny.toml  instructions.md  test.gcode  test_arc_constraints.gcode  test_comparison.py  test_marlin.gcode  test_prusa_enhanced.gcode  toto.gcode
.gcode-ls/flavors/: workspace_test.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  poutine.yml  zizmor.yml
.github/workflows/: _cargo-audit.yml  benchmarks.yml  ci-benchmarks.yml  ci-compatibility-matrix.yml  ci-coverage.yml  ci-essentials.yml  ci.yml  essentials.yml  large-scope.yml  release.yml  schedule-renovate.yml  schedule-supply-chain.yml
benches/: generate_test_files.py  large_file_benchmark.rs  lsp_benchmarks.rs  parsing_benchmarks.rs  run_benchmarks.sh  validation_benchmarks.rs
benches/test_files/: complex_cnc.gcode  error_heavy.gcode  large_print.gcode  very_large_print.gcode
ci/: test_full.sh
docs/: CONSTRAINT_ANALYSIS_TEMPLATE.md  FLAVOR_MANAGER.md  PERFORMANCE_BENCHMARKING.md
docs/issues/: 0000-issue-convention.md  0001-prd-questions.md  0001-project-scaffold.md  0002-parser-tokenizer.md  0003-flavor-manager.md  0004-hover-diagnostics.md  0005-completions-symbols.md  0006-incremental-parsing-performance.md  0007-packaging-release.md  0009-codebase-architecture-overhaul.md  0010-performance-benchmarks.md  0011-comprehensive-flavor-coverage.md  0012-documentation-parsers.md  0013-modular-flavor-architecture.md  0014-declarative-parameter-constraints.md
examples/: parser_demo.rs  sample_prusa.gcode
src/: config.rs  flavor.rs  gcode.rs  lib.rs  main.rs
tests/: config_integration_tests.rs  document_symbols_test.rs  enhanced_symbols_test.rs  flavor_file_watching_tests.rs  flavor_manager_tests.rs  initialize_smoke.rs  integration_validation_test.rs  modeline_integration_tests.rs  modeline_position_tests.rs  parameter_validation_tests.rs
(+31 files in other folders)
