[package]
name = "gcode-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
regex = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["rt", "macros", "io-std"] }
