[package]
name = "gcode-language-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gcode-ls"
path = "src/bin/gcode-ls.rs"

[dependencies]
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
regex = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "fs", "time"] }
notify = "6.1"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing_benchmarks"
harness = false

[[bench]]
name = "lsp_benchmarks"
harness = false

[[bench]]
name = "validation_benchmarks"
harness = false
