[package]
name = "gcode-language-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gcode-ls"
path = "src/bin/gcode-ls.rs"

[[bench]]
harness = false
name = "parsing_benchmarks"

[[bench]]
harness = false
name = "lsp_benchmarks"

[[bench]]
harness = false
name = "validation_benchmarks"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
log = "0.4"
notify = "8.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread",
  "time"
] }
toml = "1.1"
tower-lsp = "0.20"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.0"
